--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^13.5.0",
+    "autoprefixer": "10.4.5",
     "bootstrap": "^5.1.3",
     "nosleep.js": "^0.12.0",
     "react": "^18.1.0",
@@ -14,6 +15,9 @@
     "react-scripts": "5.0.1",
     "reactstrap": "^9.0.2",
     "web-vitals": "^2.1.4"
+  },
+  "overrides": {
+    "autoprefixer": "10.4.5"
   },
   "scripts": {
     "start": "react-scripts start",
